[package]
name = "rzip"
version = "0.1.0"
authors = ["LukasBrass <lukas.brasseleur@gmail.com>", "Iankkkk <yanifoughali08@gmail.com>", "Lexinor <alternonolimit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="2.33.0"
zip="0.5.4"
